[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
test-sbf = []

[lib]
name="tests"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=1.18.18"
solana-program-test = "=1.18.18"
solana-validator = "=1.18.18"

[dependencies]
tokio = "1.38.0"
solana-sdk = "=1.18.18"
