[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
test-sbf = []

[lib]
name="tests"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=2.0.2"
solana-program-test = "=2.0.2"
# solana-test-validator = "=2.0.2"
# solana-test-validator = "=2.0.2"
solana-sdk = "=2.0.2"
tokio = "1.38.0"
token_sale = { path="../token_sale" }
borsh = "1.5.1"
spl-token = "6.0.0"
solana-program = "2.0.2"
