[package]
name = "token_sale"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
hex = "0.4.3"
merkletreers = "1.2.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
sha256 = "1.5.0"
shank = "0.4.2"
solana-program = "2.0.0"
spl-discriminator = "0.3.0"
spl-token = { version="6.0.0", features=[ "no-entrypoint" ] }
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"

[lib]
name="token_sale"
crate-type = ["cdylib", "rlib"]
