[package]
name = "whitelisted_token"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
shank = "0.4.2"
solana-program = "2.0.0"
spl-discriminator = "0.3.0"
thiserror = "1.0.61"

[lib]
name="whitelisted_token"
crate-type = ["cdylib", "rlib"]
